--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <img src="img/logo.svg" alt="Logo da MusicDot">
-        <h1>
+        <h1 class="titulo">
             Sobre a empresa
         </h1>
 
@@ -23,23 +23,23 @@
         </p>
 
         <p>
-            Nossa matriz fica em Mafra, em Santa Catarina . De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:
+            Nossa matriz fica em <a href="http://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:
         </p>
 
-        <figure>
+        <figure class="matriz-musicdot">
             <img src="img/matriz-musicdot.png" alt="Foto da Matriz Atual da MusicDot">
             <figcaption>Matriz MusicDot</figcaption>
         </figure>
 
         <p>
-            Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
+            Assine os cursos da MusicDot. Acesse <a href="index.html">nosso site</a> ou entre em contato se tiver dúvidas. Conheça também <a href="#nossahistoria">nossa história</a> e nossos <a href="#diferenciais">diferenciais</a>.
         </p>
 
-        <h2>
+        <h2 id="nossahistoria" class="subtitulo">
             História
         </h2>
 
-        <figure>
+        <figure class="familia-tupfeln">
             <img src="img/familia-tupfeln.jpg" alt="Foto da familia tupfeln">
             <figcaption>Familia Tupfeln</figcaption>
         </figure>
@@ -62,7 +62,53 @@
 
         <p>
             Dada a importância econômica da empresa para o Brasil, a família Tüpfeln já recebeu diversos prêmios, homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
-        </p> 
+        </p>
+
+
+        <h2 id="diferenciais" class="subtitulo">
+            Diferenciais
+        </h2>
+
+        <ul>
+            <li>Menor preço do mercado, garantido</li>
+            <li>Se você achar um serviço mais barato, leva 1 mês de graça</li>
+            <li>Pague em reais, dólares, euros, libras, dodgecoins, litecoins ou bitcoins</li>
+            <li>Todas as compras acompanham acesso à Alura</li>
+            <li>Maior escola de música online do mundo</li>
+            <li>Atendimento via telefone, email, chat, twitter, facebook, instagram, ICQ, WhatsApp, SMS, carta, fax, sinal de fumaça e telegrama</li>
+            <li>Presente em 124 países</li>
+            <li>Mais de um milhão de funcionários em todo o mundo</li>
+
+        </ul>
+
+        <h2 class="titulo">
+            Contato            
+        </h2>
+
+        <h3 class="contato__subtitle">Correspondência</h3>
+        <small>(todos os dias, das 9h às 18h)</small>
+        
+        <address class="contato__info">
+        AOVS Sistemas de Informática S.A <br>
+        Rua Vergueiro, 3185, 8º Andar <br>
+        Vila Mariana <br>
+        São Paulo - SP
+        </address>
+
+        <h3 class="contato__subtitle">Telefones</h3>
+        <small>(segunda à sexta, das 9h às 18h)</small>
+
+        <dl class="contato__info">
+            <div>
+                <dt class="contato__info-titulo">Pessoa Física:</dt>
+                <dd class="contato__info-descricao"><a href="tel://4118-3319">(11) 4118-3319</a></dd> <br>
+            </div>
+
+            <div>
+                <dt class="contato__info-titulo"> Pessoa Jurídica: </dt>
+                <dd class="contato__info-descricao"> <a href="tel://4118-2172"> (11) 4118-2172 </a> </dd>
+            </div>
+        </dl>
 
     </body>
 </html>
